--- a/src/lab.html
+++ b/src/lab.html
@@ -45,7 +45,7 @@
                             <p>Связь с менеджером</p>
                         </div>
                         <div class="consultation__block consultation__form">
-                            <button class="button button--type_1 button--height_3" type="button">Заказать</button>
+                            <button class="button button--type_1 button--height_3" type="button" data-fancybox="recall_1" data-src="#recall_popup">Заказать</button>
                         </div>
                     </div>
                 </div>
@@ -69,22 +69,22 @@
 
             <ul class="tiles">
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_1.svg" alt="">
                         <span class="tile-link__title">Широкая область аккредитации</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_2">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_2.svg" alt="">
                         <span class="tile-link__title">Выполнение исследований<br> в короткие сроки</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_3.svg" alt="">
                         <span class="tile-link__title">Высокая точность результатов</span>
-                    </a>
+                    </div>
                 </li>
             </ul>
 
@@ -194,7 +194,7 @@
                         <li>По готовности сразу же отправляем Вам сканы протоколов;</li>
                         <li>Отправляем с курьером оригиналы протоколов.</li>
                     </ol>
-                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4">Заказать</button></p>
+                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4" type="button" data-fancybox="recall_2" data-src="#recall_popup">Заказать</button></p>
                 </div>
                 <div class="two-lists__block two-lists__block--type_1">
                     <h3 class="h2 text-center">Самостоятельно</h3>
@@ -207,7 +207,7 @@
                         <li>По готовности сразу же отправляем Вам сканы протоколов;</li>
                         <li>Отправляем с курьером оригиналы протоколов.</li>
                     </ol>
-                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4">Заказать</button></p>
+                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4" type="button" data-fancybox="recall_3" data-src="#recall_popup">Заказать</button></p>
                 </div>
             </div>
 
@@ -294,6 +294,8 @@
     </main>
 
     //= template/footer_lab.html
+
+    //= template/recall_popup.html
 
     <!--общие скрипты-->
     //= template/scripts.html
