--- a/src/lab_2.html
+++ b/src/lab_2.html
@@ -34,7 +34,7 @@
 
             <ul class="tiles">
                 <li class="tiles__item">
-                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="javascript:void(0)" data-fancybox="recall_1" data-src="#recall_popup">
                         <span class="tile-link__title">Санитарно-бактериологические исследования объектов окружающей среды</span>
                         <span class="tile-link__text">
                             • Вода централизованных систем питьевого водоснабжения, питьевая вода из ёмкостей, вода из скважин, вода горячего водоснабжения, вода плавательных бассейнов и аквапарков, вода поверхностных водных объектов;<br>
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="tiles__item">
-                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="javascript:void(0)" data-fancybox="recall_2" data-src="#recall_popup">
                         <span class="tile-link__title">Санитарно-химические исследования объектов окружающей среды:</span>
                         <span class="tile-link__text">
                             • Вода централизованных систем питьевого водоснабжения, питьевая вода из ёмкостей, вода из скважин, вода горячего водоснабжения, вода плавательных бассейнов и аквапарков, вода поверхностных водных объектов;<br>
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li class="tiles__item">
-                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="javascript:void(0)" data-fancybox="recall_3" data-src="#recall_popup">
                         <span class="tile-link__title">Санитарно-паразитологические исследования объектов окружающей среды:</span>
                         <span class="tile-link__text">
                             • Вода централизованных систем питьевого водоснабжения, питьевая вода из ёмкостей, вода из скважин, вода горячего водоснабжения, вода плавательных бассейнов и аквапарков, вода поверхностных водных объектов;<br>
@@ -76,7 +76,7 @@
                     </a>
                 </li>
                 <li class="tiles__item">
-                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="javascript:void(0)" data-fancybox="recall_4" data-src="#recall_popup">
                         <span class="tile-link__title">Измерение физических факторов в жилых и общественных зданиях, в производственных помещениях и на рабочих местах</span>
                         <span class="tile-link__button-block">
                             <span class="button button--type_1 button--height_1">Заказать</span>
@@ -191,7 +191,7 @@
                         <li>По готовности сразу же отправляем Вам сканы протоколов;</li>
                         <li>Отправляем с курьером оригиналы протоколов.</li>
                     </ol>
-                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4">Заказать</button></p>
+                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4" type="button" data-fancybox="recall_5" data-src="#recall_popup">Заказать</button></p>
                 </div>
                 <div class="two-lists__block two-lists__block--type_1">
                     <h3 class="h2 text-center">Самостоятельно</h3>
@@ -204,7 +204,7 @@
                         <li>По готовности сразу же отправляем Вам сканы протоколов;</li>
                         <li>Отправляем с курьером оригиналы протоколов.</li>
                     </ol>
-                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4">Заказать</button></p>
+                    <p class="two-lists__button-block"><button class="button button--type_1 button--height_4" type="button" data-fancybox="recall_6" data-src="#recall_popup">Заказать</button></p>
                 </div>
             </div>
 
@@ -275,6 +275,8 @@
     </main>
 
     //= template/footer_lab.html
+
+    //= template/recall_popup.html
 
     <!--общие скрипты-->
     //= template/scripts.html
