--- a/src/lab_6.html
+++ b/src/lab_6.html
@@ -124,6 +124,8 @@
 
     //= template/footer_lab.html
 
+    //= template/recall_popup.html
+
     <!--общие скрипты-->
     //= template/scripts.html
 
