--- a/src/lab_3.html
+++ b/src/lab_3.html
@@ -44,7 +44,7 @@
                             <p>Связь с менеджером</p>
                         </div>
                         <div class="consultation__block consultation__form">
-                            <button class="button button--type_1 button--height_3" type="button">Заказать</button>
+                            <button class="button button--type_1 button--height_3" type="button" data-fancybox="recall_2" data-src="#recall_popup">Заказать</button>
                         </div>
                     </div>
                 </div>
@@ -55,64 +55,64 @@
 
             <ul class="tiles">
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_1.svg" alt="">
                         <span class="tile-link__title">Объектам хозяйственно-питьевого водоснабжения</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_2">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_2.svg" alt="">
                         <span class="tile-link__title">Бассейнам и аквапаркам</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_3.svg" alt="">
                         <span class="tile-link__title">Салонам красоты</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_2">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_1.svg" alt="">
                         <span class="tile-link__title">Предприятиям общественного питания</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_2.svg" alt="">
                         <span class="tile-link__title">Лечебно-профилактическим учреждениям</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_2">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_3.svg" alt="">
                         <span class="tile-link__title">Организациям оптовой и розничной продовольственной торговли</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_1.svg" alt="">
                         <span class="tile-link__title">Организациям, осуществляющим фармацевтическую деятельность</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_2">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_2.svg" alt="">
                         <span class="tile-link__title">Заводам и производствам</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_1">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_3.svg" alt="">
                         <span class="tile-link__title">Гостиницам</span>
-                    </a>
+                    </div>
                 </li>
                 <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
+                    <div class="tile-link tile-link--type_1 tile-link--color_2">
                         <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_1.svg" alt="">
                         <span class="tile-link__title">Офисным организациям</span>
-                    </a>
+                    </div>
                 </li>
             </ul>
 
@@ -183,6 +183,8 @@
     </main>
 
     //= template/footer_lab.html
+
+    //= template/recall_popup.html
 
     <!--общие скрипты-->
     //= template/scripts.html
