--- a/src/lab_5.html
+++ b/src/lab_5.html
@@ -87,6 +87,8 @@
 
     //= template/footer_lab.html
 
+    //= template/recall_popup.html
+
     <!--общие скрипты-->
     //= template/scripts.html
 
