--- a/src/main.html
+++ b/src/main.html
@@ -630,6 +630,7 @@
     <script src="js/complexes-list.js"></script>
     <script src="js/doctors-list.js"></script>
     <script src="js/clinics-map.js"></script>
+    <script src="js/decor.js"></script>
 
     <!--прелоадер-->
     <script src="js/preloader.js"></script>
