--- a/src/main.html
+++ b/src/main.html
@@ -445,19 +445,19 @@
 
                 <div class="about__infographic">
                     <div class="about__infographic-item">
-                        <p class="h1">150 000 <small>человек</small></p>
+                        <p class="h1">150 000<br> <small>человек</small></p>
                         <p>прошли сдачу анализов</p>
                     </div>
                     <div class="about__infographic-item">
-                        <p class="h1">24,843 <small>случаев&nbsp;заболеваний</small></p>
+                        <p class="h1">24,843<br> <small>случаев заболеваний</small></p>
                         <p>было выявлено специалистами</p>
                     </div>
                     <div class="about__infographic-item">
-                        <p class="h1">24,843 <small>случаев&nbsp;заболеваний</small></p>
+                        <p class="h1">24,843<br> <small>случаев заболеваний</small></p>
                         <p>было выявлено специалистами</p>
                     </div>
                     <div class="about__infographic-item">
-                        <p class="h1">24,843 <small>случаев&nbsp;заболеваний</small></p>
+                        <p class="h1">24,843<br> <small>случаев заболеваний</small></p>
                         <p>было выявлено специалистами</p>
                     </div>
                 </div>
