--- a/src/already_pages/personal_8.html
+++ b/src/already_pages/personal_8.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-    <title>Личный кабинет - Результаты</title>
+    <title>Личный кабинет - Личные данные</title>
 
     <meta name="description" content="">
 
@@ -61,7 +61,19 @@
                             <div class="user-data__form">
                                 <div class="user-data__form-row">
                                     <label class="input-label">
-                                        <span class="input-label__label-text">Как вас зовут? *</span>
+                                        <span class="input-label__label-text">Имя *</span>
+                                        <input class="input type_1" type="text" value="" />
+                                    </label>
+                                </div>
+                                <div class="user-data__form-row">
+                                    <label class="input-label">
+                                        <span class="input-label__label-text">Фамилия *</span>
+                                        <input class="input type_1" type="text" value="" />
+                                    </label>
+                                </div>
+                                <div class="user-data__form-row">
+                                    <label class="input-label">
+                                        <span class="input-label__label-text">Отчество *</span>
                                         <input class="input type_1" type="text" value="" />
                                     </label>
                                 </div>
