--- a/src/main.html
+++ b/src/main.html
@@ -513,7 +513,7 @@
                     <div class="doctor">
                         <div class="doctor__image"><img src="images/content/doctors/img_1.jpg" srcset="images/content/doctors/img_1@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
                         <div class="doctor__info">
-                            <p class="doctor__name"><a href="#">Гринжола<br> Елена Николаевна</a></p>
+                            <p class="doctor__name"><a href="#">Константинопольский<br> Константин Константинович</a></p>
                             <p class="doctor__place">Руководитель ОКДЛ-врач клинический лабораторной диагностики</p>
                             <p class="doctor__exp">Стаж 20 лет</p>
                         </div>
