--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
 
         <li><a href="analysis.html" target="_blank">Анализ/комплекс детально</a></li>
 
+        <li><a href="analysis_2.html" target="_blank">Анализ/комплекс детально с боковым меню</a></li>
+
         <li><a href="prices.html" target="_blank">Цены</a></li>
 
         <li><a href="services.html" target="_blank">Медицинские услуги</a></li>
@@ -47,7 +49,11 @@
 
         <li><a href="service_3.html" target="_blank">Контент страница услуги</a></li>
 
+        <li><a href="issues.html" target="_blank">Заболевания</a></li>
+
         <li><a href="issue.html" target="_blank">Заболевание</a></li>
+
+        <li><a href="doctor.html" target="_blank">Врач</a></li>
 
         <li><a href="consult.html" target="_blank">Запись на консультацию - 1 шаг</a></li>
 
@@ -63,7 +69,7 @@
 
         <li><a href="lab_3.html" target="_blank">Производственный контроль</a></li>
 
-        <li><a href="lab_4.html" target="_blank">Врач</a></li>
+        <li><a href="lab_4.html" target="_blank">Врач лаборатории</a></li>
 
         <li><a href="lab_5.html" target="_blank">Все отзывы</a></li>
 
