--- a/src/text.html
+++ b/src/text.html
@@ -229,6 +229,28 @@
 
             <br><br>
 
+            <label class="select-wrapper select-wrapper--type_5">
+                <span class="select-wrapper__container">
+                    <select class="js-select" placeholder="">
+                        <option value="0">г. Санкт-Петербург, Богатырский пр., д. 4</option>
+                        <option value="1">г. Санкт-Петербург, Кондратьевский пр., д. 62, к. 3</option>
+                        <option value="2">г. Санкт-Петербург, Ленинский пр., д. 88</option>
+                        <option value="3">г. Санкт-Петербург, наб. Фонтанки, д. 154</option>
+                        <option value="3">г. Санкт-Петербург, пр. Наставников, д. 36 к. 2</option>
+                        <option value="4">г. Санкт-Петербург, пр. Просвещения, д.14 к.4</option>
+                        <option value="5">г. Санкт-Петербург, Пулковское шоссе, д. 28А</option>
+                        <option value="6">г. Санкт-Петербург, ул. Будапештская, д. 6</option>
+                        <option value="7">г. Санкт-Петербург, ул. Малая Конюшенная, д.2</option>
+                        <option value="8">г. Санкт-Петербург, ул. Моисеенко, д. 5</option>
+                        <option value="9">г. Санкт-Петербург, ул. Олеко Дундича, д. 8</option>
+                        <option value="10">г. Санкт-Петербург, ул. Правды, д. 18</option>
+                        <option value="11">г. Санкт-Петербург, ул. Школьная, д. 116, к1</option>
+                    </select>
+                </span>
+            </label>
+
+            <br><br>
+
             <h6>Кнопки</h6>
 
             <p>
