clinic page + doctor page

--- a/src/doctor.html
+++ b/src/doctor.html
@@ -35,10 +35,46 @@
                 <div class="doctor-detail__text-block">
                     <div class="doctor-detail__name">
                         <div class="doctor-detail__name-block">
-                            <h1 class="h2">Фамилия Имя Отчество</h1>
+                            <h1 class="h2">Константинопольский<br> Константин Константинович</h1>
                             <p class="h3">Уролог, Гинеколог, Хирург</p>
                         </div>
                         <button class="button button--type_1 button--height_4" type="button">Записаться на прием</button>
+                    </div>
+
+                    <div class="doctor-detail__features-block">
+                        <p class="doctor-detail__exp">3 года<br> <small>стаж работы</small></p>
+                        <div class="doctor-detail__features">
+                            <p>Врач высшей категории</p>
+                            <p>Кандидат медицинских наук</p>
+                            <p>Ведущий специалист</p>
+                        </div>
+                    </div>
+
+                    <div class="doctor-detail__contacts">
+                        <a href="mailto:petrov@cdm.ru">
+                            <svg class="icon">
+                                <use xlink:href="#envelope"></use>
+                            </svg>
+                            petrov@cdm.ru
+                        </a>
+                        <a href="#" title="Facebook" rel="nofollow noreferrer noopener">
+                            <svg class="icon">
+                                <use xlink:href="#fb"></use>
+                            </svg>
+                            @petrov
+                        </a>
+                        <a href="#" title="Вконтакте" rel="nofollow noreferrer noopener">
+                            <svg class="icon">
+                                <use xlink:href="#vk"></use>
+                            </svg>
+                            @petrov
+                        </a>
+                        <a href="#" title="Instagram" rel="nofollow noreferrer noopener">
+                            <svg class="icon">
+                                <use xlink:href="#inst"></use>
+                            </svg>
+                            @petrov
+                        </a>
                     </div>
 
                     <div class="doctor-detail__clinics">
