--- a/src/issues.html
+++ b/src/issues.html
@@ -44,7 +44,7 @@
             <div class="alphabeth-block">
                 <div class="alphabeth-block__letter">К</div>
                 <ul class="alphabeth">
-                    <li class="alphabeth__item"><button class="alphabeth__button" type="button">A</button></li>
+                    <li class="alphabeth__item"><a class="alphabeth__button" href="#">A</a></li>
                     <li class="alphabeth__item"><button class="alphabeth__button" type="button">Б</button></li>
                     <li class="alphabeth__item"><button class="alphabeth__button" type="button">В</button></li>
                     <li class="alphabeth__item"><button class="alphabeth__button" type="button">Г</button></li>
