--- a/src/about.html
+++ b/src/about.html
@@ -313,6 +313,44 @@
 
             //= template/map-block.html
 
+            <h2 class="text-center">Наша миссия</h2>
+
+            <div class="text-block text-block--860">
+                <p>Выполняет широкий спектр лабораторных анализов, в том числе гематологические и общеклинические исследования, исследование гемостаза, биохимический анализ крови на инфекции методов иммуноферментного анализа, коагулологические,
+                    гормональные, генетические, иммунологические, микробиологические, гистологические, онкоцитологические исследования, диагностику паразитарных инфекций, ПЦР-диагностику, определение маркеров воспалительного процесса и аутоиммунных
+                    заболеваний и лекарственный мониторинг. Кроме лабораторных исследований, в медицинских офисах и диагностических центрах можно пройти инструментальные и рентгенологические исследования, обследование методами компьютерной
+                    диагностики и получить консультацию врача.</p>
+                <br>
+                <p><img src="images/content/about/img_4.jpg" alt=""></p>
+                <br>
+                <p>Выполняет широкий спектр лабораторных анализов, в том числе гематологические и общеклинические исследования, исследование гемостаза, биохимический анализ крови на инфекции методов иммуноферментного анализа, коагулологические,
+                    гормональные, генетические.</p>
+                <br>
+                <p><img src="images/content/about/img_5.jpg" alt=""></p>
+            </div>
+
+            <h2>История</h2>
+
+            <div class="columns columns--reverse">
+                <div class="columns__column">
+                    <img src="images/content/about/img_6.jpg" alt="">
+                </div>
+                <div class="columns__column">
+                    <p>Выполняет широкий спектр лабораторных анализов, в том числе гематологические и общеклинические исследования, исследование гемостаза, биохимический анализ крови на инфекции методов иммуноферментного анализа, коагулологические,
+                        гормональные, генетические, иммунологические, микробиологические, гистологические, онкоцитологические исследования, диагностику паразитарных инфекций, ПЦР-диагностику, определение маркеров воспалительного процесса и
+                        аутоиммунных заболеваний и лекарственный мониторинг. Кроме лабораторных исследований, в медицинских офисах и диагностических центрах можно пройти инструментальные и рентгенологические исследования, обследование методами
+                        компьютерной диагностики и получить консультацию врача.</p>
+                    <p>
+                        <a class="button button--type_1 button--height_3" href="#">
+                            <span>Узнать больше</span>
+                            <svg class="icon">
+                                <use xlink:href="#arrow_right"></use>
+                            </svg>
+                        </a>
+                    </p>
+                </div>
+            </div>
+
             <h2 class="text-center">Вакансии</h2>
 
             <div class="accordions">
