--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,12 @@
 
         <li><a href="vacancies.html" target="_blank">Вакансии</a></li>
 
+        <li><a href="insurance.html" target="_blank">Страховые компании</a></li>
+
+        <li><a href="history.html" target="_blank">История компании</a></li>
+
+        <li><a href="management.html" target="_blank">Руководство компании</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
