--- a/src/about.html
+++ b/src/about.html
@@ -329,6 +329,121 @@
                 <p><img src="images/content/about/img_5.jpg" alt=""></p>
             </div>
 
+            <div class="gendir">
+                <h2>Генеральный директор</h2>
+                <p>Хирург-эндокринолог высшей квалификационной категории,<br> онколог, детский хирург, доктор медицинских наук</p>
+
+                <div class="manager">
+                    <div class="manager__image"><img src="images/content/management/img_1.jpg" srcset="images/content/management/img_1@2x.jpg 2x" alt="Имя"></div>
+                    <div class="manager__info">
+                        <p class="h4"><b>Слепцов Илья Валерьевич</b></p>
+                        <p class="h4"><b>Образование: Санкт-Петербургская государственная педиатрическая медицинская академия</b></p>
+                        <p>
+                            Хирург-эндокринолог высшей квалификационной категории, онколог, детский хирург, доктор медицинских наук, главный специалист по эндокринологии и эндокринной хирургии Клиники высоких медицинских технологий им. Н.И. Пирогова
+                            Санкт-Петербургского государственного университета, член правления Азиатско-Тихоокеанской ассоциации хирургии щитовидной железы, член Совета Российской ассоциации эндокринных хирургов, член Европейской тиреоидной
+                            ассоциации, Европейской ассоциации эндокринных хирургов, Российской ассоциации эндокринологов.
+                        </p>
+                        <p><a class="button button--type_3 button--height_3" href="#">Подробнее</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="title-block">
+                <h2>Команда руководства</h2>
+                <div class="title-block__controls">
+                    <div id="team_list_buttons" class="title-block__buttons title-block__buttons--type_1"></div>
+                    <a class="more-link" href="#">
+                        Команда
+                        <svg class="icon">
+                            <use xlink:href="#arrow_right"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="js-doctors-list doctors-list" data-buttons="team_list_buttons">
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_1.jpg" srcset="images/content/doctors/img_1@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Гринжола<br> Елена Николаевна</a></p>
+                            <p class="doctor__place">Руководитель ОКДЛ-врач клинический лабораторной диагностики</p>
+                            <p class="doctor__exp">Стаж 20 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_2.jpg" srcset="images/content/doctors/img_2@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Водяник<br> Павел Иванович</a></p>
+                            <p class="doctor__place">Руководитель медицинского центра</p>
+                            <p class="doctor__exp">Стаж 10 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_3.jpg" srcset="images/content/doctors/img_3@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Володина<br> Людмила Николаевна</a></p>
+                            <p class="doctor__place">Руководитель медицинского центра</p>
+                            <p class="doctor__exp">Стаж 15 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_4.jpg" srcset="images/content/doctors/img_4@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Писарева<br> Елена Михайловна</a></p>
+                            <p class="doctor__place">Врач-педиатор</p>
+                            <p class="doctor__exp">Стаж 10 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_1.jpg" srcset="images/content/doctors/img_1@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Константинопольский<br> Константин Константинович</a></p>
+                            <p class="doctor__place">Руководитель ОКДЛ-врач клинический лабораторной диагностики</p>
+                            <p class="doctor__exp">Стаж 20 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_2.jpg" srcset="images/content/doctors/img_2@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Водяник<br> Павел Иванович</a></p>
+                            <p class="doctor__place">Руководитель медицинского центра</p>
+                            <p class="doctor__exp">Стаж 10 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_3.jpg" srcset="images/content/doctors/img_3@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Володина<br> Людмила Николаевна</a></p>
+                            <p class="doctor__place">Руководитель медицинского центра</p>
+                            <p class="doctor__exp">Стаж 15 лет</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-list__item">
+                    <div class="doctor">
+                        <div class="doctor__image"><img src="images/content/doctors/img_4.jpg" srcset="images/content/doctors/img_4@2x.jpg 2x" alt="Гринжола Елена Николаевна"></div>
+                        <div class="doctor__info">
+                            <p class="doctor__name"><a href="#">Писарева<br> Елена Михайловна</a></p>
+                            <p class="doctor__place">Врач-педиатор</p>
+                            <p class="doctor__exp">Стаж 10 лет</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <h2>История</h2>
 
             <div class="columns columns--reverse">
