--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,10 @@
 
         <li><a href="management.html" target="_blank">Руководство компании</a></li>
 
+        <li><a href="faq.html" target="_blank">Часто задававемые вопросы</a></li>
+
+        <li><a href="partners.html" target="_blank">Партнеры</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
