--- a/src/analyzes_2.html
+++ b/src/analyzes_2.html
@@ -42,11 +42,13 @@
             <div class="search-bar">
                 <div class="search-bar__title-block">
                     <h1 class="search-bar__title">Анализы</h1>
-                    <label class="switch">
+                    <!--УБРАТЬ-->
+                    <!--<label class="switch">
                         <input type="checkbox" />
                         <span class="switch__icon"></span>
                         <span>Анализы на дому</span>
-                    </label>
+                    </label>-->
+                    <!--УБРАТЬ-->
                 </div>
                 <div class="search-bar__form-block">
                     <form class="search-bar__form" action="">
@@ -56,15 +58,55 @@
                                 <use xlink:href="#search"></use>
                             </svg>
                         </button>
-                        <label class="search-bar__select select-wrapper select-wrapper--type_3">
+                        <!--УБРАТЬ-->
+                        <!--<label class="search-bar__select select-wrapper select-wrapper--type_3">
                             <span class="select-wrapper__container">
                                 <select class="js-select">
                                     <option value="1">Поиск по анализам</option>
                                     <option value="2">Поиск по услугам</option>
                                 </select>
                             </span>
-                        </label>
+                        </label>-->
+                        <!--УБРАТЬ-->
                         <div class="search-bar__dropdown">
+                            <div class="search-bar__items">
+                                <button class="search-bar__item" type="button">
+                                    <svg class="icon">
+                                        <use xlink:href="#search"></use>
+                                    </svg>
+                                    Клинический анализ крови
+                                </button>
+                                <button class="search-bar__item" type="button">
+                                    <svg class="icon">
+                                        <use xlink:href="#search"></use>
+                                    </svg>
+                                    Клинический анализ крови
+                                </button>
+                                <button class="search-bar__item" type="button">
+                                    <svg class="icon">
+                                        <use xlink:href="#search"></use>
+                                    </svg>
+                                    Клинический анализ крови
+                                </button>
+                                <button class="search-bar__item" type="button">
+                                    <svg class="icon">
+                                        <use xlink:href="#search"></use>
+                                    </svg>
+                                    Клинический анализ крови
+                                </button>
+                                <button class="search-bar__item" type="button">
+                                    <svg class="icon">
+                                        <use xlink:href="#search"></use>
+                                    </svg>
+                                    Клинический анализ крови
+                                </button>
+                                <button class="search-bar__item" type="button">
+                                    <svg class="icon">
+                                        <use xlink:href="#search"></use>
+                                    </svg>
+                                    Клинический анализ крови
+                                </button>
+                            </div>
                             <div class="search-bar__options">
                                 <div class="search-bar__options-column">
                                     <p class="search-bar__options-title">Популярные</p>
@@ -120,50 +162,93 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="search-bar__items">
-                                <button class="search-bar__item" type="button">
-                                    <svg class="icon">
-                                        <use xlink:href="#search"></use>
-                                    </svg>
-                                    Клинический анализ крови
-                                </button>
-                                <button class="search-bar__item" type="button">
-                                    <svg class="icon">
-                                        <use xlink:href="#search"></use>
-                                    </svg>
-                                    Клинический анализ крови
-                                </button>
-                                <button class="search-bar__item" type="button">
-                                    <svg class="icon">
-                                        <use xlink:href="#search"></use>
-                                    </svg>
-                                    Клинический анализ крови
-                                </button>
-                                <button class="search-bar__item" type="button">
-                                    <svg class="icon">
-                                        <use xlink:href="#search"></use>
-                                    </svg>
-                                    Клинический анализ крови
-                                </button>
-                                <button class="search-bar__item" type="button">
-                                    <svg class="icon">
-                                        <use xlink:href="#search"></use>
-                                    </svg>
-                                    Клинический анализ крови
-                                </button>
-                                <button class="search-bar__item" type="button">
-                                    <svg class="icon">
-                                        <use xlink:href="#search"></use>
-                                    </svg>
-                                    Клинический анализ крови
-                                </button>
-                            </div>
                         </div>
                     </form>
                 </div>
             </div>
 
             <h2>Каталог анализов</h2>
+
+            <div class="filter">
+                <div class="filter__item filter__item--type_2">
+                    <span class="filter__item-title"></span>
+                    <label class="checkbox-label">
+                        <input type="checkbox" />
+                        <span class="checkbox-icon"></span>
+                        <span class="checkbox-text">Сдать анализ на дому</span>
+                    </label>
+                </div>
+                <div class="filter__item filter__item--type_2">
+                    <span class="filter__item-title">Пол</span>
+                    <label class="select-wrapper select-wrapper--type_1">
+                        <span class="select-wrapper__container">
+                            <select class="js-select" placeholder="Пол">
+                                <option value=""></option>
+                                <option value="1">Мужской</option>
+                                <option value="2">Женский</option>
+                            </select>
+                        </span>
+                    </label>
+                </div>
+                <div class="filter__item filter__item--type_2">
+                    <span class="filter__item-title">Система организма</span>
+                    <label class="select-wrapper select-wrapper--type_1">
+                        <span class="select-wrapper__container">
+                            <select class="js-select" placeholder="Системы организма">
+                                <option value=""></option>
+                                <option value="1">Дыхательная система</option>
+                                <option value="2">Пищеварительная система</option>
+                                <option value="3">Мочевыделительная система</option>
+                                <option value="4">Опорно-двигательный аппарат</option>
+                                <option value="5">Циркуляторная система</option>
+                                <option value="6">Нервная система</option>
+                            </select>
+                        </span>
+                    </label>
+                </div>
+                <div class="filter__item filter__item--type_2">
+                    <span class="filter__item-title">Заболевание</span>
+                    <label class="select-wrapper select-wrapper--type_1">
+                        <span class="select-wrapper__container">
+                            <select class="js-select" placeholder="Заболевание">
+                                <option value=""></option>
+                                <option value="1">Тип 1</option>
+                                <option value="2">Тип 2</option>
+                                <option value="3">Тип 3</option>
+                                <option value="4">Тип 4</option>
+                                <option value="5">Тип 5</option>
+                                <option value="6">Тип 6</option>
+                            </select>
+                        </span>
+                    </label>
+                </div>
+                <div class="filter__item filter__item--type_2">
+                    <span class="filter__item-title">Беременность</span>
+                    <label class="select-wrapper select-wrapper--type_1">
+                        <span class="select-wrapper__container">
+                            <select class="js-select" placeholder="Беременность">
+                                <option value=""></option>
+                                <option value="1">Да</option>
+                                <option value="2">Нет</option>
+                            </select>
+                        </span>
+                    </label>
+                </div>
+                <div class="filter__item filter__buttons">
+                    <button class="button button--height_4 button--type_3" type="submit">
+                        <svg class="icon">
+                            <use xlink:href="#eye"></use>
+                        </svg>
+                        <span>Показать</span>
+                    </button>
+                    <button class="button button--height_4 button--type_3" type="reset">
+                        <svg class="icon">
+                            <use xlink:href="#refresh"></use>
+                        </svg>
+                        <span>Сбросить</span>
+                    </button>
+                </div>
+            </div>
 
             <div class="menued-list">
                 <div class="menued-list__left">
