searc-bar__item make link

--- a/src/analyzes_2.html
+++ b/src/analyzes_2.html
@@ -70,12 +70,12 @@
                         <!--УБРАТЬ-->
                         <div class="search-bar__dropdown">
                             <div class="search-bar__items">
-                                <button class="search-bar__item" type="button">
+                                <a class="search-bar__item" href="#">
                                     <svg class="icon">
                                         <use xlink:href="#search"></use>
                                     </svg>
                                     Клинический анализ крови
-                                </button>
+                                </a>
                                 <button class="search-bar__item" type="button">
                                     <svg class="icon">
                                         <use xlink:href="#search"></use>
