--- a/src/main.html
+++ b/src/main.html
@@ -21,7 +21,7 @@
     //= template/style.html
 </head>
 
-<body>
+<body id="top">
     //= template/sprite.html
 
     //= template/preloader.html
@@ -622,6 +622,8 @@
     //= template/float-bar.html
 
     //= template/geo.html
+
+    //= template/to_top.html
 
     <!--общие скрипты-->
     //= template/scripts.html
