--- a/src/service_2.html
+++ b/src/service_2.html
@@ -67,7 +67,13 @@
                             <span class="checkbox-icon"></span>
                             <span class="checkbox-text">Согласен на обработку персональных&nbsp;данных</span>
                         </label>
-                        <button class="button button--type_1 button--height_4" type="submit">Записаться</button>
+                        <button class="button button--type_1 button--height_4" type="submit" data-fancybox="info" data-src="#info_popup">Записаться</button>
+                    </div>
+                    <div id="info_popup" class="info-popup">
+                        <p class="info-popup__title">Спасибо за заявку!</p>
+                        <div class="info-popup__text">
+                            <p>Мы приняли вашу заявку.<br> Наш менеджер свяжется с вами<br> в ближайшее время.</p>
+                        </div>
                     </div>
                 </div>
             </div>
