--- a/src/text.html
+++ b/src/text.html
@@ -1231,6 +1231,36 @@
                     </div>
                 </div>
             </div>
+
+            <br><br>
+
+            <p><button class="button button--type_1 button--height_4" type="button" data-fancybox="record" data-src="#record_popup">Открыть попап</button></p>
+
+            <div id="record_popup" class="record-popup">
+                <p class="h2 text-center">Запись ко врачу</p>
+                <div class="record-form">
+                    <div class="record-form__inputs">
+                        <div class="record-form__input">
+                            <label class="input-label">
+                                <input class="input" type="text" value="" placeholder="Ваше имя">
+                            </label>
+                        </div>
+                        <div class="record-form__input">
+                            <label class="input-label">
+                                <input class="js-phone-mask input" type="text" value="" placeholder="Телефон" inputmode="text">
+                            </label>
+                        </div>
+                    </div>
+                    <label class="checkbox-label">
+                        <input type="checkbox">
+                        <span class="checkbox-icon"></span>
+                        <span class="checkbox-text">Согласен на обработку персональных&nbsp;данных</span>
+                    </label>
+                    <p class="text-center">
+                        <button class="button button--type_1 button--height_4" type="submit">Записаться</button>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 
