new banner-slider + video for main + add review + reviews slider for doctor + fixes

--- a/src/analyzes.html
+++ b/src/analyzes.html
@@ -163,6 +163,46 @@
                 </div>
             </div>
 
+            <div class="slider-wrapper">
+                <div class="js-slider slider">
+                    <div class="slider__slide">
+                        <a class="slider__slide-link" href="#">
+                            <span class="slider__slide-image">
+                                <img src="images/content/slider/img_2.jpg" srcset="images/content/slider/img_2@2x.jpg 2x" alt="">
+                            </span>
+                            <span class="slider__slide-container">
+                                <span class="slider__slide-title">Диагностика<br> коронавируса COVID-19<br> в лаборатории</span>
+                                <span class="slider__slide-text">Короткий текст для описания слайда.<br> Может быть в две строки или чуть больше</span>
+                                <span class="slider__slide-button">Подробнее</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="slider__slide">
+                        <a class="slider__slide-link" href="#">
+                            <span class="slider__slide-image">
+                                <img src="images/content/slider/img_2.jpg" srcset="images/content/slider/img_2@2x.jpg 2x" alt="">
+                            </span>
+                            <span class="slider__slide-container">
+                                <span class="slider__slide-title">Диагностика<br> коронавируса COVID-19<br> в лаборатории</span>
+                                <span class="slider__slide-button">Подробнее</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="slider__slide">
+                        <a class="slider__slide-link" href="#">
+                            <span class="slider__slide-image">
+                                <img src="images/content/slider/img_2.jpg" srcset="images/content/slider/img_2@2x.jpg 2x" alt="">
+                            </span>
+                            <span class="slider__slide-container">
+                                <span class="slider__slide-title">Диагностика<br> коронавируса COVID-19<br> в лаборатории</span>
+                                <span class="slider__slide-button">Подробнее</span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="slider-nav"></div>
+            </div>
+
             <h2>Каталог анализов</h2>
 
             <div class="filter">
@@ -652,6 +692,7 @@
 
     <!--скрипты страницы-->
     <script src="js/search.js"></script>
+    <script src="js/slider.js"></script>
     <script src="js/complexes-list.js"></script>
     <script src="js/decor.js"></script>
 
