--- a/src/main.html
+++ b/src/main.html
@@ -426,6 +426,23 @@
                 </li>
             </ul>
 
+            <div class="columns">
+                <div class="columns__column columns__column--align_center">
+                    <div class="responsive-video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PSccuRCGTt8?autoplay=1&amp;loop=1&amp;mute=1" title="YouTube video player" frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="columns__column columns__column--align_center">
+                    <div class="incut">
+                        <p class="text-center">
+                            <b>Северо-Западный Центр доказательной медицины – это современный медицинский кластер, оказывающий жителям Санкт-Петербурга, Ленинградской области и регионов полный цикл медицинской помощи на этапах диагностики, лечения и
+                                реабилитации и профилактики.</b>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <h2>О компании</h2>
 
             <div class="about">
