--- a/src/doctor.html
+++ b/src/doctor.html
@@ -122,6 +122,75 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="title-block">
+                <h2>Отзывы о специалисте</h2>
+                <div id="reviews_slider_2_buttons" class="title-block__buttons title-block__buttons--type_1"></div>
+            </div>
+
+            <div class="js-reviews-slider-2 reviews-slider-2" data-buttons="reviews_slider_2_buttons">
+                <div class="reviews-slider-2__item">
+                    <div class="review-2">
+                        <p class="review-2__time">21.05.2021</p>
+                        <p class="review-2__title">Романова Анна,<br> Санкт-Петербург</p>
+                        <p class="review-2__preview">
+                            Хочу сказать огромное спасибо медсестре выездной службы Корнеенко Наталье! Брала на дому кровь из вены у ребенка 2,7! Все очень профессионально, быстро, качественно!
+                        </p>
+                        //= template/review_popup_full.html
+                        <a class="button button--height_1 button--type_3" href="javascript:void(0)" data-fancybox="review" data-src="#review_popup_full">Отзыв полностью</a>
+                    </div>
+                </div>
+                <div class="reviews-slider-2__item">
+                    <div class="review-2">
+                        <p class="review-2__time">21.05.2021</p>
+                        <p class="review-2__title">Романова Анна,<br> Санкт-Петербург</p>
+                        <p class="review-2__preview">
+                            Хочу сказать огромное спасибо медсестре выездной службы Корнеенко Наталье! Брала на дому кровь из вены у ребенка 2,7! Все очень профессионально, быстро, качественно!
+                        </p>
+                        <a class="button button--height_1 button--type_3" href="javascript:void(0)" data-fancybox="review_2" data-src="#review_popup_full">Отзыв полностью</a>
+                    </div>
+                </div>
+                <div class="reviews-slider-2__item">
+                    <div class="review-2">
+                        <p class="review-2__time">21.05.2021</p>
+                        <p class="review-2__title">Романова Анна,<br> Санкт-Петербург</p>
+                        <p class="review-2__preview">
+                            Хочу сказать огромное спасибо медсестре выездной службы Корнеенко Наталье! Брала на дому кровь из вены у ребенка 2,7! Все очень профессионально, быстро, качественно!
+                        </p>
+                        <a class="button button--height_1 button--type_3" href="javascript:void(0)" data-fancybox="review_3" data-src="#review_popup_full">Отзыв полностью</a>
+                    </div>
+                </div>
+                <div class="reviews-slider-2__item">
+                    <div class="review-2">
+                        <p class="review-2__time">21.05.2021</p>
+                        <p class="review-2__title">Романова Анна,<br> Санкт-Петербург</p>
+                        <p class="review-2__preview">
+                            Хочу сказать огромное спасибо медсестре выездной службы Корнеенко Наталье! Брала на дому кровь из вены у ребенка 2,7! Все очень профессионально, быстро, качественно!
+                        </p>
+                        <a class="button button--height_1 button--type_3" href="javascript:void(0)" data-fancybox="review_4" data-src="#review_popup_full">Отзыв полностью</a>
+                    </div>
+                </div>
+                <div class="reviews-slider-2__item">
+                    <div class="review-2">
+                        <p class="review-2__time">21.05.2021</p>
+                        <p class="review-2__title">Романова Анна,<br> Санкт-Петербург</p>
+                        <p class="review-2__preview">
+                            Хочу сказать огромное спасибо медсестре выездной службы Корнеенко Наталье! Брала на дому кровь из вены у ребенка 2,7! Все очень профессионально, быстро, качественно!
+                        </p>
+                        <a class="button button--height_1 button--type_3" href="javascript:void(0)" data-fancybox="review_5" data-src="#review_popup_full">Отзыв полностью</a>
+                    </div>
+                </div>
+                <div class="reviews-slider-2__item">
+                    <div class="review-2">
+                        <p class="review-2__time">21.05.2021</p>
+                        <p class="review-2__title">Романова Анна,<br> Санкт-Петербург</p>
+                        <p class="review-2__preview">
+                            Хочу сказать огромное спасибо медсестре выездной службы Корнеенко Наталье! Брала на дому кровь из вены у ребенка 2,7! Все очень профессионально, быстро, качественно!
+                        </p>
+                        <a class="button button--height_1 button--type_3" href="javascript:void(0)" data-fancybox="review_6" data-src="#review_popup_full">Отзыв полностью</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -135,6 +204,7 @@
     //= template/scripts.html
 
     <!--скрипты страницы-->
+    <script src="js/reviews-slider-2.js"></script>
     <script src="js/decor.js"></script>
 
     <!--прелоадер-->
