--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,8 @@
 
         <li><a href="personal_10.html" target="_blank">Личный кабинет - заключение</a></li>
 
+        <li><a href="personal_11.html" target="_blank">Корзина</a></li>
+
         <li><a href="get_results.html" target="_blank">Узнать анализ</a></li>
 
         <li><a href="about.html" target="_blank">О компании</a></li>
