--- a/src/main.html
+++ b/src/main.html
@@ -429,7 +429,7 @@
             <div class="columns">
                 <div class="columns__column columns__column--align_center">
                     <div class="video">
-                        <video class="video__video" preload="auto" loop="loop" muted poster="images/poster.webp">
+                        <video class="video__video" preload="none" loop="loop" muted poster="images/poster.webp">
                             <source src="images/intro_video.mp4">
                         </video>
                         <button class="video__play" type="button" title="Включить видео"></button>
